--- a/templates/default/irccat.xml.erb
+++ b/templates/default/irccat.xml.erb
@@ -18,6 +18,7 @@
                 <nick><%= node[:irccat][:nick] %></nick>
                 <!-- The number of milliseconds between each outgoing message in the bot's queue -->
                 <messagedelay>250</messagedelay>
+                <version><%= node[:irccat][:realname] %></version>
         </bot>
 
         <!-- Address/port to listen on for data to cat to IRC -->
